--- a/main.css
+++ b/main.css
@@ -12,36 +12,41 @@ html {
 
 body{
     font-family: 'Nunito', sans-serif;
-    color: black;
+    color: white;
     font-weight: 300;
     text-align: center;
+    font-size: large;
     line-height: 2;
     margin-top: -20px;
     margin-bottom: -20px;
     background-image: url(http://jd-doria.com/full/logic_of_nature/logic_of_nature_12.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-}
-
-.header {
-    background-color: floralwhite;
-    margin-top: 50px;
-    border-radius: 10%;
     
 }
 
+.header {
+    background-color: black;
+    margin-top: 50px;
+    border-radius: 0%;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);    
+}
+
 button {
-    background-color: gray !important;
-    border: 4px solid white;
-    padding: 10px;
-    border-radius: 3px;
+    background-color: white ;
+    border: 4px solid black;
+    border-radius: 50%;
+    padding: 50px;
+    font-size: x-large;
+    color: black
 }
 
 button:hover {
-    background-color:deepskyblue !important;
-    border: 4px solid gray;
-    padding: 10px;
-    border-radius: 3px;
+    background-color:cornflowerblue;
+    border: 4px solid black;
+    color: white;
+    transition-duration: 0.3s;
+    border-color: white;
 }
 
 /* Styles for poster */
@@ -55,7 +60,9 @@ button:hover {
     grid-template-columns: repeat(8, 1fr);
     grid-template-rows: repeat(8, 8vw);
     grid-gap: 3rem;
-    padding-top: 20px;
+    padding: 20px;
+    background-color: white;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.4);
 }
 
 .gallery__img{
@@ -65,6 +72,8 @@ button:hover {
     display: block;
     padding: 10px;
     background-color: black;
+    transition-duration: 0.3s;
+    /* transition-delay: 0.5s; */
 }
 
 .gallery__img:hover {
@@ -73,7 +82,7 @@ button:hover {
     max-height: 100%;
     display: block;
     padding: 10px;
-    background-color: deepskyblue;
+    background-color:cornflowerblue;
 }
 
 .gallery__item--1{
