--- a/main.css
+++ b/main.css
@@ -82,7 +82,7 @@ button:hover {
     max-height: 100%;
     display: block;
     padding: 10px;
-    background-color:cornflowerblue;
+    background-color:gray;
 }
 
 .gallery__item--1{
