--- a/main.css
+++ b/main.css
@@ -35,14 +35,14 @@ body{
 button {
     background-color: white ;
     border: 4px solid black;
-    border-radius: 50%;
-    padding: 50px;
+    /* border-radius: 50%; */
+    padding: 25px;
     font-size: x-large;
     color: black
 }
 
 button:hover {
-    background-color:cornflowerblue;
+    background-color:rgb(24, 24, 24);
     border: 4px solid black;
     color: white;
     transition-duration: 0.3s;
